@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2009-06-XX  Release 7.14.10                                    ---
 ----------------------------------------------------------------------
 
+* search command now works in Archer - Cliff Yapp
 * make_bb now handles empty combinations correctly - Bob Parker
 * no more rtweight crashing when PWD or HOME are unset - Sean Morrison
 * fixed "Invalid NMG" empty output bug in g-stl - Sean Morrison
